hphp/test/slow/protected_internal/static_property_protected_internal_visibility.php.expectf

Warning: Accessing internal static property A::$foo in module M1 from module M2 is not allowed in %s on line 8

Fatal error: Invalid static property access: A::foo in %s on line 8
